--- a/electron-vue-app/src/index.css
+++ b/electron-vue-app/src/index.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  #root {
+    @apply h-full;
+  }
+
+  html, body {
+    @apply h-full;
+    @apply select-none;
+    @apply font-mono antialiased text-white;
+    @apply overflow-hidden;
+  }
+
+  header {
+    -webkit-app-region: drag;
+  }
+  
+  button {
+    -web-app-region: no-drag;
+  }
+}
+
