--- a/vue-todo-list/src/index.css
+++ b/vue-todo-list/src/index.css
@@ -11,3 +11,15 @@
 html, body, #app {
   height: 100%;
 }
+
+::-webkit-scrollbar {
+  @apply w-1.5 rounded-full
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-gray-200 rounded-full 
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-sky-200 rounded-full opacity-50
+}
